# hexlet_pytest

./: .gitignore  README.md  pyproject.toml
hexlet_pytest/: example.py
tests/: test_stack.py
